# file_operations

./: CMakeLists.txt  README.md  build.sh
include/file_operations/: binary_file.hpp  yaml_parser.hpp
tests/: test_signal_file.cpp  test_yaml_parser.cpp
